--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Booking Destresser",
   "version": "1.0",
-  "description": "Make Booking.com great again!",
+  "description": "Remove unneccesary information from Booking.com",
   "manifest_version": 2,
   "content_scripts": [
   {
